# glitch-effect

./: .gitignore  CHANGELOG.md  Makefile  Makefile.am  Makefile.in  PKGBUILD  README.md  \  check-dependencies.sh  cleanup  cleanup.sh  commemt  config.h  config.h.in  config.status  configure  configure.ac  copy-config  copy-config.sh  glitch  glitch.cpp
.deps/: arginterpreter.Po  asciiBuffer.Po  configLoader.Po  fileLoader.Po  glitch.Po  logger.Po  printer.Po  utils.Po
.github/workflows/: c-cpp.yml
ascii/: chad.txt  sad-face
ascii/test/: test-pyramid.txt
conf/: config.conf  config.json  config.jsonc
config/: config.conf  glitch-effect.conf
lncurses-test/: glitch  glitch.cpp
src/: ArgInterpreter.h  AsciiBuffer.h  ConfigLoader.h  FileLoader.h  Linedistort-pass.h  Logger.h  METADATA.h  PassLoader.h  Printer.h  Utils.h  \  arginterpreter.cpp  asciiBuffer.cpp  config-loader.cpp  config-loader.h  configLoader.cpp  effect_config.h  file-loader.cpp  fileLoader.cpp  glitch.cpp  linedistort-pass.cpp  logger.cpp  passLoader.cpp  printer.cpp  utils.cpp
src/.deps/: arginterpreter.Po  asciiBuffer.Po  configLoader.Po  fileLoader.Po  glitch.Po  logger.Po  printer.Po  utils.Po
test/: loggerTest  loggerTest.cpp
