MAKEFLAGS = -j$(nproc)
OBJDIR = $(top_builddir)/obj
AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = glitch
glitch_SOURCES = src/arginterpreter.cpp \
				 src/asciiBuffer.cpp \
				 src/configLoader.cpp \
				 src/fileLoader.cpp \
				 src/glitch.cpp \
				 src/logger.cpp \
				 src/printer.cpp \
				 src/utils.cpp
